# wraith

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  WRAITH.md  initial-project-conversation.md  phase.md  product-plan.md
.github/: copilot-instructions.md
.github/agents/: bug-fixer.agent.md  code-reviewer.agent.md  code-writer.agent.md
.github/workflows/: release.yml
docs/: configuration.md  plugins.md  providers.md  tools.md  vim-mode.md
rust/: .gitignore  .wraith-todos.json  CONTRIBUTING.md  Cargo.toml  README.md  WRAITH.md
rust/.github/workflows/: ci.yml
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  error.rs  lib.rs
rust/crates/api/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
rust/crates/api/tests/: client_integration.rs  provider_client_integration.rs
rust/crates/commands/: Cargo.toml
rust/crates/commands/src/: lib.rs
rust/crates/lsp/: Cargo.toml
rust/crates/lsp/src/: client.rs
rust/crates/plugins/: Cargo.toml
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bootstrap.rs  config.rs  conversation.rs  file_ops.rs  lib.rs  oauth.rs  prompt.rs  remote.rs  sandbox.rs
rust/crates/server/: Cargo.toml
rust/crates/server/src/: lib.rs
rust/crates/tools/: .gitignore  Cargo.toml
rust/crates/tools/src/: lib.rs
rust/crates/wraith-cli/: Cargo.toml
rust/crates/wraith-cli/src/: app.rs  args.rs  init.rs  input.rs  main.rs  render.rs
rust/docs/releases/: 0.1.0.md
