[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
lsp-types = "0.97"
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
# Pre-existing inherited lints — intentional in terminal I/O and rendering code
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
explicit_counter_loop = "allow"
format_push_string = "allow"
if_same_then_else = "allow"
match_same_arms = "allow"
single_match_else = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unnested_or_patterns = "allow"
unused_self = "allow"
useless_format = "allow"
