[package]
name = "wraith-commands"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Slash command handling for the WRAITH AI coding agent"
homepage = "https://github.com/Sulaiman-Dauda/wraith"

[lints]
workspace = true

[dependencies]
plugins = { path = "../plugins", version = "0.1.0", package = "wraith-plugins" }
runtime = { path = "../runtime", version = "0.1.0", package = "wraith-runtime" }
serde_json.workspace = true
