[package]
name = "wraith-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Plugin system for the WRAITH AI coding agent"
homepage = "https://github.com/Sulaiman-Dauda/wraith"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
