[package]
name = "wraith-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sha2 = "0.10"
glob = "0.3"
lsp = { path = "../lsp", version = "0.1.0", package = "wraith-lsp" }
plugins = { path = "../plugins", version = "0.1.0", package = "wraith-plugins" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
walkdir = "2"

[lints]
workspace = true
