[package]
name = "wraith-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Built-in tools (file ops, bash, web, LSP) for the WRAITH AI coding agent"
homepage = "https://github.com/Sulaiman-Dauda/wraith"

[dependencies]
api = { path = "../api", version = "0.1.0", package = "wraith-api" }
plugins = { path = "../plugins", version = "0.1.0", package = "wraith-plugins" }
runtime = { path = "../runtime", version = "0.1.0", package = "wraith-runtime" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

[lints]
workspace = true
