[package]
name = "wraith-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The ghost in your terminal — an AI coding agent in Rust"
keywords = ["ai", "cli", "coding-agent", "terminal", "llm"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[[bin]]
name = "wraith"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
crossterm = "0.28"
pulldown-cmark = "0.13"
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tools = { path = "../tools" }

[lints]
workspace = true
