[package]
name = "wraith-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The ghost in your terminal — an AI coding agent in Rust"
keywords = ["ai", "cli", "coding-agent", "terminal", "llm"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[[bin]]
name = "wraith"
path = "src/main.rs"

[dependencies]
api = { path = "../api", version = "0.1.0", package = "wraith-api" }
commands = { path = "../commands", version = "0.1.0", package = "wraith-commands" }
crossterm = "0.28"
pulldown-cmark = "0.13"
rustyline = "15"
runtime = { path = "../runtime", version = "0.1.0", package = "wraith-runtime" }
plugins = { path = "../plugins", version = "0.1.0", package = "wraith-plugins" }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tools = { path = "../tools", version = "0.1.0", package = "wraith-tools" }

[lints]
workspace = true
